-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 210805) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

????2005 (v2.4.4)  -** stable release **-
21082005 (v2.4.3)  -** stable release **-
	- added: support for ALSA sequencer support; see ecasound(1)
	         and examples.html [pedrolc]
	- added: runtime warning about possible problems when mixing 
		 resample and jack objects
	- changed: scheduling changes for MIDI and disk i/o subsystems; 
		   possibly affects performance in certain use-scenarios;
		   fixes debian bug #317900
	- changed: updated config.guess and config.sub to more recent
		   versions (timestamp 2005-04-22)
	- fixed: failed runtime check from eca-fileio-stream.cpp:159
	- fixed: eiam - ao-remove'ing JACK input/outputs caused a segfault
	- fixed: --disable-jack/--enable-jack did not work
	- fixed: system-hangs when run in realtime mode and using a large
	         disk i/o double-buffer (-z:db)
	- fixed: ewf-debugging output was left enabled in 2.4.2 release
	- fixed: bug in detecting finished-state with .ewf files when
		 used with -z:db mode enabled -> caused flood of underrun
		 warnings with multi .ewf file sessions
07082005 (v2.4.2)  -** stable release **-
	- note: verified to compile ok with gcc-4.0.0 and gcc-4.0.1 [kaiv]
	- added: eiam - ctrlp-list, ctrlp-selected, ctrlp-get, ctrlp-select
	         and ctrlp-set commands; the last two are RT-commands;