@@ -32,8 +32,8 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=15
-LIBECASOUND_VERSION_AGE=1
+LIBECASOUND_VERSION=16
+LIBECASOUND_VERSION_AGE=0
 LIBECASOUNDC_VERSION=1
 LIBECASOUNDC_VERSION_AGE=0
 LIBKVUTILS_VERSION=7
